# likert

./: README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
likert/examples/in_their_own_words/: Corrected combined Sentiment analysis.xlsx  In their own words -- drug user self reference preferences.ipynb  Sentiment analysis for in your own words addict's self-reference.xlsx  __init__.py  auto_sentiment_scores.xlsx  notes and comments.md  terms_sentiments_and_categories.xlsx  ~$Corrected combined Sentiment analysis.xlsx
likert/examples/in_their_own_words/data/: in_their_own_words_survey_2021_11.xlsx  in_their_own_words_survey_2022_01.xlsx
