[metadata]
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
version = 0.0.1
description = Tools to analyze Likert scale data
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = likert
display_name = likert

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

